[package]
name = "nasl"
version = "0.0.1"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

[workspace]
members = [ "./nasl-sys" ]


[dependencies]
log = "0.4"
env_logger = "0.6.0"

libc = "^0.2"
nasl-sys = { path = "./nasl-sys" }

[dev-dependencies]

chrono = "0.4"
ansi_term = "0.11"
